{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 140,
  "lineage": "84a9e185-a3f3-7547-a82f-3733d904220d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019de26156377049b",
            "arn": "arn:aws:ec2:eu-central-1:279826333202:elastic-ip/eipalloc-019de26156377049b",
            "association_id": "eipassoc-04b9cb05dba57425c",
            "domain": "vpc",
            "id": "eipalloc-019de26156377049b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-070541a3224498f7c",
            "private_dns": "ip-10-0-1-18.eu-central-1.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-18-153-47-194.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.47.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071878317c449ae48",
            "arn": "arn:aws:ec2:eu-central-1:279826333202:instance/i-03bebb9f0fd983459",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bebb9f0fd983459",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "final_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06070df4b7f5b21ca",
            "private_dns": "ip-10-0-1-95.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-18-194-137-91.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.137.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb85c0ec3c59bf81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-013c7343555fb85a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae52f8d384642da7",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c7343555fb85a8"
            ]
          },
          "dependencies": [
            "aws_key_pair.final_project_key",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.final_project",
            "tls_private_key.final_project_key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "final_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071878317c449ae48",
            "arn": "arn:aws:ec2:eu-central-1:279826333202:instance/i-045eb6ddf93eb1d91",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045eb6ddf93eb1d91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "final_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047f8411de829d882",
            "private_dns": "ip-10-0-5-50.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00c96014004d27ede",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-013c7343555fb85a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091cf64a1c54eebb4",
            "tags": {
              "Name": "final-web-instance-1"
            },
            "tags_all": {
              "Name": "final-web-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c7343555fb85a8"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.bastion",
            "aws_internet_gateway.final_project_igw",
            "aws_key_pair.final_project_key",
            "aws_lb.final_project_alb",
            "aws_nat_gateway.final_project_nat",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project",
            "tls_private_key.final_project_key"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071878317c449ae48",
            "arn": "arn:aws:ec2:eu-central-1:279826333202:instance/i-0c2fbcc30fe1f2edd",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2fbcc30fe1f2edd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "final_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071854bd1de94ba82",
            "private_dns": "ip-10-0-6-93.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e1ff5c56dff4a99",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-013c7343555fb85a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a8a5dbe5cd0d083",
            "tags": {
              "Name": "final-web-instance-2"
            },
            "tags_all": {
              "Name": "final-web-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c7343555fb85a8"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.bastion",
            "aws_internet_gateway.final_project_igw",
            "aws_key_pair.final_project_key",
            "aws_lb.final_project_alb",
            "aws_nat_gateway.final_project_nat",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project",
            "tls_private_key.final_project_key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final_project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:internet-gateway/igw-0ebad19bc173b91f7",
            "id": "igw-0ebad19bc173b91f7",
            "owner_id": "279826333202",
            "tags": {
              "Name": "final-project-igw"
            },
            "tags_all": {
              "Name": "final-project-igw"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "final_project_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:loadbalancer/app/final-project-alb/e946d48adcec14db",
            "arn_suffix": "app/final-project-alb/e946d48adcec14db",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "final-project-alb-1532280437.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:loadbalancer/app/final-project-alb/e946d48adcec14db",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "final-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ac3d1261e0e24c75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f54c4a546055b11"
              },
              {
                "subnet_id": "subnet-0ae52f8d384642da7"
              }
            ],
            "subnets": [
              "subnet-00f54c4a546055b11",
              "subnet-0ae52f8d384642da7"
            ],
            "tags": {
              "Name": "final-project-alb"
            },
            "tags_all": {
              "Name": "final-project-alb"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:listener/app/final-project-alb/e946d48adcec14db/5ce55bd666c6c754",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:listener/app/final-project-alb/e946d48adcec14db/5ce55bd666c6c754",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:loadbalancer/app/final-project-alb/e946d48adcec14db",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.final_project_alb",
            "aws_lb_target_group.final_project_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "final_project_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476",
            "arn_suffix": "targetgroup/final-project-tg/3cb69bd221632476",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:279826333202:loadbalancer/app/final-project-alb/e946d48adcec14db"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "final-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "final-project-tg"
            },
            "tags_all": {
              "Name": "final-project-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476-20240724204712629700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476",
            "target_id": "i-045eb6ddf93eb1d91"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.bastion",
            "aws_instance.final_web",
            "aws_internet_gateway.final_project_igw",
            "aws_key_pair.final_project_key",
            "aws_lb.final_project_alb",
            "aws_lb_target_group.final_project_tg",
            "aws_nat_gateway.final_project_nat",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project",
            "tls_private_key.final_project_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476-20240724204712694600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:279826333202:targetgroup/final-project-tg/3cb69bd221632476",
            "target_id": "i-0c2fbcc30fe1f2edd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.bastion",
            "aws_instance.final_web",
            "aws_internet_gateway.final_project_igw",
            "aws_key_pair.final_project_key",
            "aws_lb.final_project_alb",
            "aws_lb_target_group.final_project_tg",
            "aws_nat_gateway.final_project_nat",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project",
            "tls_private_key.final_project_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "final_project_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019de26156377049b",
            "association_id": "eipassoc-04b9cb05dba57425c",
            "connectivity_type": "public",
            "id": "nat-05e7380425ed63454",
            "network_interface_id": "eni-070541a3224498f7c",
            "private_ip": "10.0.1.18",
            "public_ip": "18.153.47.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ae52f8d384642da7",
            "tags": {
              "Name": "final-project-nat"
            },
            "tags_all": {
              "Name": "final-project-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.final_project_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_rt_1_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d48863a5e0a12bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e7380425ed63454",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d48863a5e0a12bf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.final_project_igw",
            "aws_nat_gateway.final_project_nat",
            "aws_route_table.private_rt_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_rt_2_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0256347426359c3171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e7380425ed63454",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0256347426359c317",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.final_project_igw",
            "aws_nat_gateway.final_project_nat",
            "aws_route_table.private_rt_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ebad19bc173b91f7",
            "id": "r-rtb-0d5771a1dd17f11031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5771a1dd17f1103",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.final_project_igw",
            "aws_route_table.public_rt",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:route-table/rtb-03d48863a5e0a12bf",
            "id": "rtb-03d48863a5e0a12bf",
            "owner_id": "279826333202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e7380425ed63454",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-1-final-project"
            },
            "tags_all": {
              "Name": "private-rt-1-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:route-table/rtb-0256347426359c317",
            "id": "rtb-0256347426359c317",
            "owner_id": "279826333202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e7380425ed63454",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-2-final-project"
            },
            "tags_all": {
              "Name": "private-rt-2-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:route-table/rtb-0d5771a1dd17f1103",
            "id": "rtb-0d5771a1dd17f1103",
            "owner_id": "279826333202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebad19bc173b91f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-final-project"
            },
            "tags_all": {
              "Name": "public-rt-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf4fe16dd55cf73",
            "route_table_id": "rtb-03d48863a5e0a12bf",
            "subnet_id": "subnet-091cf64a1c54eebb4"
          },
          "dependencies": [
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9ef3c300b17fcaf",
            "route_table_id": "rtb-0256347426359c317",
            "subnet_id": "subnet-08a8a5dbe5cd0d083"
          },
          "dependencies": [
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae0c8ce6db7147bc",
            "route_table_id": "rtb-0d5771a1dd17f1103",
            "subnet_id": "subnet-0ae52f8d384642da7"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8d8fa80f03d6e74",
            "route_table_id": "rtb-0d5771a1dd17f1103",
            "subnet_id": "subnet-00f54c4a546055b11"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:security-group/sg-0ac3d1261e0e24c75",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac3d1261e0e24c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240724152529734700000005",
            "name_prefix": "terraform-",
            "owner_id": "279826333202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-alb-sg"
            },
            "tags_all": {
              "Name": "final-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:security-group/sg-013c7343555fb85a8",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c7343555fb85a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac3d1261e0e24c75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240724152532432800000006",
            "name_prefix": "terraform-",
            "owner_id": "279826333202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-ec2-sg"
            },
            "tags_all": {
              "Name": "final-project-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-80969562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013c7343555fb85a8",
            "security_group_rule_id": "sgr-0ad479f720facd03f",
            "self": false,
            "source_security_group_id": "sg-013c7343555fb85a8",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.final_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:subnet/subnet-091cf64a1c54eebb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091cf64a1c54eebb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279826333202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:subnet/subnet-08a8a5dbe5cd0d083",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a8a5dbe5cd0d083",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279826333202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:subnet/subnet-0ae52f8d384642da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae52f8d384642da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279826333202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:subnet/subnet-00f54c4a546055b11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f54c4a546055b11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279826333202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-02d4c098d43cea3bc"
          },
          "dependencies": [
            "aws_vpc.final_project"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:279826333202:vpc/vpc-02d4c098d43cea3bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d7e0fd7db35f2e8",
            "default_route_table_id": "rtb-06263220b386e9193",
            "default_security_group_id": "sg-0269f2dd22ffcadab",
            "dhcp_options_id": "dopt-0335451eb0d2eebbe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d4c098d43cea3bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06263220b386e9193",
            "owner_id": "279826333202",
            "tags": {
              "Name": "final-project"
            },
            "tags_all": {
              "Name": "final-project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}